# nlp_projects

./: .gitignore  nlp_research.ipynb  pyproject.toml  tagged-desc.txt
new/: app.py  transformer.ipynb
semantic_book_recommender_app/research/: vector_search.ipynb
semantic_book_recommender_search_app/: Readme.md  dashboard.py  main.py  semantic_recommender.py  text_loader.py
semantic_book_recommender_search_app/research/: book_category_classification.ipynb  book_sentiment_analysis.ipynb  book_vector_search.ipynb  books_with_emotions.csv  sbra_data_cleaning_and_transformation.ipynb  tagged_desc.txt  vector_search.ipynb  zero_shot_classification.ipynb
semantic_book_recommender_search_app/research/text_embed_dir/ceb27196-530b-4cb9-b2c9-20f8e7477010/: index_metadata.pickle
