[tool.poetry]
name = "nlp-projects"
version = "0.1.0"
description = ""
authors = ["chibuikeeugene <chibuikeeugene@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.3.16"
langchain-chroma = "^0.2.1"
langchain-ollama = "^0.2.3"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = {version = "==1.26.2", python = ">=3.11,<3.13"}
kagglehub = "^0.3.7"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
