[project]
name = "nlp-projects"
version = "0.1.0"
description = ""
authors = [
    {name = "chibuikeeugene"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "langchain-community (>=0.3.19,<0.4.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "tensorflow-metal (>=1.2.0,<2.0.0)",
    "tf-keras (>=2.19.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "smolagents (>=1.14.0,<2.0.0)",
    "gradio (>=5.25.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
